--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
- 
+  "homepage": "http://shivamtpathi.github.io/portfolio",
+
+
   "name": "portfo",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   
   },
   "eslintConfig": {
